# portfolio

./: .gitignore  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: Home.html  footer.html  head.html  navbar.html
templates/certificates/: certificates.html
templates/projects/: ProjectD.html  projectA.html  projectD.html
